# gtplib

./: .gitignore  README.md  pyproject.toml  sample-hex.txt
examples/: decode_examples.py  decode_hex_file.py  generate_samples.py
src/gtpc/: __init__.py
src/gtpc.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gtpc/utils/: bcd.py  hexdump.py  plmn.py
src/gtpc/v1/: constants.py  header.py
src/gtpc/v1/ie/: __init__.py  base.py  registry.py  tlv.py  tv.py
src/gtpc/v1/messages/: __init__.py  base.py  cdr.py  location.py  mbms.py  mobility.py  notification.py  path.py  registry.py  tunnel.py
src/gtpc/v2/: constants.py  header.py
src/gtpc/v2/ie/: __init__.py  base.py  registry.py  typed.py
src/gtpc/v2/messages/: __init__.py  base.py  bearer.py  commands.py  forwarding.py  mbms.py  mobility.py  notification.py  path.py  pdn.py  registry.py  session.py
tests/: conftest.py
tests/v1/: test_header.py  test_ie.py  test_messages.py
tests/v2/: test_header.py  test_ie.py  test_messages.py
